// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationItem - Snapshots > matches snapshot for Follow notification 1`] = `
<div
  class="flex w-full min-w-0 items-center justify-between gap-2 cursor-pointer"
  data-testid="container"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-2"
    data-testid="container"
  >
    <a
      class="shrink-0 transition-opacity hover:opacity-80"
      href="/profile/user1"
    >
      <div
        class="lg:size-8"
        data-name="User"
        data-testid="avatar-with-fallback"
      >
        <span>
          U
        </span>
      </div>
    </a>
    <div
      class="flex min-w-0 flex-1 items-center gap-2"
      data-testid="container"
    >
      <p
        class="min-w-0 shrink text-sm leading-normal font-medium whitespace-normal text-foreground lg:flex lg:items-baseline lg:gap-1 lg:text-base lg:whitespace-nowrap"
        data-testid="typography"
      >
        <a
          class="inline-block max-w-full min-w-0 truncate align-bottom no-underline hover:no-underline"
          href="/profile/user1"
        >
          User
        </a>
         
        <a
          class="text-foreground hover:underline lg:shrink-0"
          href="/profile/user1"
        >
          followed you
        </a>
      </p>
    </div>
  </div>
  <a
    class="flex shrink-0 items-center gap-2 transition-opacity hover:opacity-80"
    href="/profile/user1"
  >
    <p
      class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:hidden"
      data-testid="typography"
    >
      30m
    </p>
    <p
      class="hidden text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:block"
      data-testid="typography"
    >
      30 MINUTES AGO
    </p>
    <div
      data-badge="false"
      data-testid="notification-icon"
      data-type="follow"
    >
      Icon
    </div>
  </a>
</div>
`;

exports[`NotificationItem - Snapshots > matches snapshot for Mention notification 1`] = `
<div
  class="flex w-full min-w-0 items-center justify-between gap-2 cursor-pointer"
  data-testid="container"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-2"
    data-testid="container"
  >
    <a
      class="shrink-0 transition-opacity hover:opacity-80"
      href="/profile/user1"
    >
      <div
        class="lg:size-8"
        data-name="User"
        data-testid="avatar-with-fallback"
      >
        <span>
          U
        </span>
      </div>
    </a>
    <div
      class="flex min-w-0 flex-1 items-center gap-2"
      data-testid="container"
    >
      <p
        class="min-w-0 shrink text-sm leading-normal font-medium whitespace-normal text-foreground lg:flex lg:items-baseline lg:gap-1 lg:text-base lg:whitespace-nowrap"
        data-testid="typography"
      >
        <a
          class="inline-block max-w-full min-w-0 truncate align-bottom no-underline hover:no-underline"
          href="/profile/user1"
        >
          User
        </a>
         
        <a
          class="text-foreground hover:underline lg:shrink-0"
          href="/post/user1/post123"
        >
          mentioned you in post
        </a>
      </p>
    </div>
  </div>
  <a
    class="flex shrink-0 items-center gap-2 transition-opacity hover:opacity-80"
    href="/post/user1/post123"
  >
    <p
      class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:hidden"
      data-testid="typography"
    >
      30m
    </p>
    <p
      class="hidden text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:block"
      data-testid="typography"
    >
      30 MINUTES AGO
    </p>
    <div
      data-badge="false"
      data-testid="notification-icon"
      data-type="mention"
    >
      Icon
    </div>
  </a>
</div>
`;

exports[`NotificationItem - Snapshots > matches snapshot for TagPost notification 1`] = `
<div
  class="flex w-full min-w-0 items-center justify-between gap-2 cursor-pointer"
  data-testid="container"
>
  <div
    class="flex min-w-0 flex-1 items-center gap-2"
    data-testid="container"
  >
    <a
      class="shrink-0 transition-opacity hover:opacity-80"
      href="/profile/user1"
    >
      <div
        class="lg:size-8"
        data-name="User"
        data-testid="avatar-with-fallback"
      >
        <span>
          U
        </span>
      </div>
    </a>
    <div
      class="flex min-w-0 flex-1 items-center gap-2"
      data-testid="container"
    >
      <p
        class="min-w-0 shrink text-sm leading-normal font-medium whitespace-normal text-foreground lg:flex lg:items-baseline lg:gap-1 lg:text-base lg:whitespace-nowrap"
        data-testid="typography"
      >
        <a
          class="inline-block max-w-full min-w-0 truncate align-bottom no-underline hover:no-underline"
          href="/profile/user1"
        >
          User
        </a>
         
        <a
          class="text-foreground hover:underline lg:shrink-0"
          href="/post/user1/post123"
        >
          tagged your post
        </a>
      </p>
      <span
        class="hidden shrink-0 lg:inline-flex"
        data-testid="post-tag"
      >
        bitcoin
      </span>
    </div>
  </div>
  <a
    class="flex shrink-0 items-center gap-2 transition-opacity hover:opacity-80"
    href="/post/user1/post123"
  >
    <p
      class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:hidden"
      data-testid="typography"
    >
      30m
    </p>
    <p
      class="hidden text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:block"
      data-testid="typography"
    >
      30 MINUTES AGO
    </p>
    <div
      data-badge="false"
      data-testid="notification-icon"
      data-type="tag_post"
    >
      Icon
    </div>
  </a>
</div>
`;

exports[`NotificationItem - Snapshots > matches snapshot for an edited collection with a title preview 1`] = `
<a
  class="hidden min-w-0 truncate text-sm font-medium text-muted-foreground hover:underline sm:block lg:text-base"
  href="/collections/collection-owner/collection-id"
>
  'Based Bitcoin'
</a>
`;
